--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -192,11 +192,20 @@ h3 {
 #main fieldset p { margin: 0 0 8px 0; float: left; width: 100%;  }
 
 #main fieldset label {
-	display: block;
 	width: 100%;
-	margin: 0 0 0px 0;
+	margin: 0 4px 0px 0;
 	line-height: 12px;
 	font-weight: bold;
+}
+
+#main fieldset #cover {
+	float:left;
+}
+
+#main #details {
+	float:left;
+	width: 60%;
+	margin: 5px 0 0 20px;
 }
 
 #main .optional {
@@ -356,4 +365,23 @@ border: 1px solid #ddd;
 	width: 200px;
 	float: left;
 	margin: 6px 10px 0 0;
+}
+
+.document_list .cover{
+	float:left;
+	margin: 5px 0 5px;
+}
+
+.document_list .details{
+	float:left;
+	margin: 5px 0 0 10px;
+}
+
+.document_list .title{
+	font-weight: bold;
+	font-size: 16px;
+}
+
+#main .document_list a:hover{
+	text-decoration: underline;
 }
