--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load documentostags %}
+
 {% block sidebar %}
 	<ul class="sideNav">
 	   	<li><a href="#">Por materia</a></li>
@@ -11,9 +13,23 @@
 
 {% block content %}
 <h3>Documentos recientes</h3>
-<table cellpadding="0" cellspacing="0">
+<table cellpadding="0" cellspacing="0" class="document_list">
     {% for documento in object_list %}
-		<tr {% cycle '' 'class="odd"' %}><td><a href="{% url documento documento.pk %}"><b>{{ documento.titulo }}</b></a>, {{ documento.autor }}</td></tr>
+		<tr {% cycle '' 'class="odd"' %}>
+			<td>
+				<div>
+					<div class="cover">
+						<a href="{% url documento documento.pk %}"><img src="{{ documento|book_cover }}"></a>
+					</div>
+					<div class="details">
+						<div class="title"><a href="{% url documento documento.pk %}">{{ documento.titulo }}</a></div>
+						{{ documento.autor }}
+					</div> 
+					<div class="clear"></div>
+					
+				</div>
+			</td>
+		</tr>
 	{% endfor %}
 	
 	<tr><td id="paginator">
