--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-{% load documentostags %}
-
 {% block sidebar %}
 	<ul class="sideNav">
 	   	<li><a href="#">Por materia</a></li>
@@ -13,46 +11,25 @@
 
 {% block content %}
 <h3>Documentos recientes</h3>
-<table cellpadding="0" cellspacing="0" class="document_list">
-    {% for documento in object_list %}
-		<tr {% cycle '' 'class="odd"' %}>
-			<td>
-				<div>
-					<div class="cover">
-						<a href="{% url documento documento.pk %}"><img src="{{ documento|book_cover }}"></a>
-					</div>
-					<div class="details">
-						<div class="title"><a href="{% url documento documento.pk %}">{{ documento.titulo }}</a></div>
-						{{ documento.autor }}
-					</div> 
-					<div class="clear"></div>
-					
-				</div>
-			</td>
-		</tr>
-	{% endfor %}
-	
-	<tr><td id="paginator">
-		{{ page_obj.start_index }} - {{ page_obj.end_index }} de {{ paginator.count }} documento{{ paginator.count|pluralize }} {% if page_obj.has_other_pages %}|{% endif %}
-		
-		{% if page_obj.has_previous %}<a href="./?{{ request.GET.urlencode }}&page=1">&lt;&lt;</a>{% endif %}
-		{% if page_obj.has_previous %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.previous_page_number }}">previa</a>{% endif %}
 
-		{% if page_obj.number|add:"-3" > 0 %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.number|add:"-3" }}">{{ page_obj.number|add:"-3" }}</a>{% endif %}
-		{% if page_obj.number|add:"-2" > 0 %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.number|add:"-2" }}">{{ page_obj.number|add:"-2" }}</a>{% endif %}
-		{% if page_obj.number|add:"-1" > 0 %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.number|add:"-1" }}">{{ page_obj.number|add:"-1" }}</a>{% endif %}
-		{% if page_obj.paginator.num_pages > 1 %}{{ page_obj.number }}{% endif %}
-		{% if page_obj.number|add:"1" <= page_obj.paginator.num_pages %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.number|add:"1" }}">{{ page_obj.number|add:"1" }}</a>{% endif %}
-		{% if page_obj.number|add:"2" <= page_obj.paginator.num_pages %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.number|add:"2" }}">{{ page_obj.number|add:"2" }}</a>{% endif %}
-		{% if page_obj.number|add:"3" <= page_obj.paginator.num_pages %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.number|add:"3" }}">{{ page_obj.number|add:"3" }}</a>{% endif %}
-		
-		
-		{% if page_obj.has_next %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.next_page_number }}"> próxima</a>{% endif %}
-		{% if page_obj.has_next %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.paginator.num_pages }}"> &gt;&gt;</a>{% endif %}
-		
-	</td></tr>
+<div id="list_container">
+	{% include 'documentos/documento_list_content.html' %}
+</div>
 	
+{% endblock %}
+
+{% block extra_head %}
+<script type="text/javascript">
+	function get_pagina(page, qs_documento) {
+		
+		data = {'qs_documento' : qs_documento, 
+				'page' : page,}
+		
+		$.get('{% url buscar_update %}', data, update_pagina, "json");
+	}
 	
-</table>
-	
+	function update_pagina(data) {
+		$('#list_container').html(data.content);
+	}
+</script>
 {% endblock %}
