Commit inicial de la busqueda por materia.

--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -2,8 +2,8 @@
 
 {% block sidebar %}
 	<ul class="sideNav">
-	   	<li><a href="#">Por materia</a></li>
-	   	<li><a class="active" href="#">Más recientes</a></li>
+	   	<li><a href="{% url busqueda_por_materia %}">Por materia</a></li>
+	   	<li><a href="{% url buscar %}" class="active">Más recientes</a></li>
 	   	<li><a href="#">Más populares</a></li>
 	   	<li><a href="#">Búsqueda avanzada</a></li>
 	</ul>
