--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -370,6 +370,7 @@ border: 1px solid #ddd;
 .document_list .cover{
 	float:left;
 	margin: 5px 0 5px;
+	width: 100px;
 }
 
 .document_list .cover img{
@@ -379,6 +380,7 @@ border: 1px solid #ddd;
 .document_list .details{
 	float:left;
 	margin: 5px 0 0 10px;
+	width : 80%;
 }
 
 .document_list .title{
