--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -20,8 +20,12 @@
 
 {% block extra_head %}
 <script type="text/javascript">
+	
+	function on_cover_error(source) {
+		$(source).unbind("error").attr("src", "{{ MEDIA_URL }}img/Blank.jpg");
+	}
+
 	function get_pagina(page, qs_documento) {
-		
 		data = {'qs_documento' : qs_documento, 
 				'page' : page,}
 		
