--- a/alephuba/templates/documentos/documento_list_content.html
+++ b/alephuba/templates/documentos/documento_list_content.html
@@ -6,7 +6,9 @@
 			<td>
 				<div>
 					<div class="cover">
-						<a href="{% url documento documento.pk %}"><img src="{{ documento|book_cover }}"></a>
+						<a href="{% url documento documento.pk %}"><img onerror="on_cover_error(this)" src="{{ documento|book_cover }}"></a>
+						{% comment %}
+						{% endcomment %}
 					</div>
 					<div class="details">
 						<div class="title"><a href="{% url documento documento.pk %}">{{ documento.titulo }}</a></div>
