--- a/alephuba/templates/documentos/add_documento.html
+++ b/alephuba/templates/documentos/add_documento.html
@@ -4,8 +4,13 @@
 
 <h3>Subir documento</h3>
 
-{% with submit_value='Subir' %}
-	{% include 'form.html' %}
-{% endwith %}
+{% if not site_available %}
+<p>El servidor de subidas no se encuentra disponible en este momento. Vuelva a intentar más tarde.</p>
+{% else %}
+	{% with submit_value='Subir' enctype='enctype="multipart/form-data"' %}
+		{% include 'form.html' %}
+	{% endwith %}
+{% endif %}
+
 
 {% endblock %} 
