--- a/alephuba/templates/mi_cuenta.html
+++ b/alephuba/templates/mi_cuenta.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3>Mi cuenta:</h3>
+<h2>Mi cuenta</h2>
 
 <fieldset>
 	<p><label>Usuario:</label></p><p>{{ user.username }}</p><p/>
