--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -150,7 +150,13 @@ h3 {
 	line-height: 14px;
 	font-weight: bold;
 	color: #5494af;
-	padding: 0 0 0 10px;
+	margin: 20px 0 10px;
+}
+
+
+h2 {
+	font-size: 20px;
+	color: #5494af;
 	margin: 20px 0 10px;
 }
 
@@ -246,8 +252,6 @@ h3 {
 
 
 #main .text p{
-	padding: 5px 7px;
-	margin: 0 10px 0 15px;
 	line-height: 1.2;
 	}
 	
@@ -303,6 +307,30 @@ h3 {
 	font: status-bar;
 	
 	}
+
+
+/* -------------
+* Noticias
+* ------------- */
+
+.noticia .titulo {
+	font-size: 14px;
+	line-height: 14px;
+	font-weight: bold;
+	color: #5494af;
+	margin: 20px 0 5px;
+	}
+
+.noticia .contenido {
+	margin: 5px 0 10px;
+	}
+
+
+.noticia .detalle {
+	color : #b1b1b1;
+	margin: 5px 0 5px;
+	}
+
 
 /* -------------
 * Buttons
@@ -388,6 +416,6 @@ border: 1px solid #ddd;
 	font-size: 16px;
 }
 
-#main .document_list a:hover{
+#main a:hover{
 	text-decoration: underline;
 }
