--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -331,6 +331,14 @@ h2 {
 	margin: 5px 0 5px;
 	}
 
+#home_footer {
+	margin: 30px 0 0 0;	
+}
+
+#home_footer .next {
+	float: right;
+	}
+
 
 /* -------------
 * Buttons
