se agrega noticia al hacer un upload

--- a/alephuba/templates/home.html
+++ b/alephuba/templates/home.html
@@ -13,13 +13,8 @@
 {% block content %}
 {{ block.super }}
 
-<h2>Bienvenido</h2>
+<h2>Novedades</h2>
 
-<div class="text">
-<p>Bienvenido a <b>aleph uba</b>, el punto donde convergen, sin superposición, todos los documentos. Del universo (?).</p>
-</div>
- 
- <br/>
 {% for noticia in object_list %}
 	<div class="noticia">
 		<div class="titulo">{{ noticia.titulo }}</div>
