validacion en wizard

--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -278,6 +278,12 @@ h2 {
 	margin-top: 10px;
 	 }
 
+.error {
+	font-weight: bold;
+	color: red;	
+}
+
+
 .form_error {
 	font-weight: bold;
 	color: red;	
