--- a/alephuba/templates/documentos/add_documento.html
+++ b/alephuba/templates/documentos/add_documento.html
@@ -149,7 +149,6 @@
 		
 		function trigger_progressbar() {
 			
-			
 			//mostrar barra
 			$('.field_container').hide();
 			$("#progressbar").hide();
@@ -166,6 +165,7 @@
 		}
 			
 		function progressbar_update(data) {
+			alert('updateo progress bar');
 			var percentage = Math.floor(100 * parseInt(data.uploaded) / parseInt(data.length));
 			//$("#progressbar").value(percentage);
 		}
