--- a/alephuba/templates/documentos/add_documento.html
+++ b/alephuba/templates/documentos/add_documento.html
@@ -157,10 +157,10 @@
 			});
 			$("#progressbar").fadeIn();
 			
-			setInterval(function() {
+			/* setInterval(function() {
 			    $.getJSON("{% url upload_progress %}?X-Progress-ID=HOLA", 
 			    		progressbar_update);
-		  	}, 2000);
+		  	}, 2000); */
 			
 		}
 			
