--- a/alephuba/templates/documentos/add_documento.html
+++ b/alephuba/templates/documentos/add_documento.html
@@ -12,7 +12,7 @@
    	<fieldset id="step_tipo" class="step">
    		<h3>Paso 1 - Tipo de documento</h3>
 		<div class="field_container">
-			<p><label for="id_tipo">Tipo:</label></p>
+			<p><label for="id_tipo">Tipo de documento:</label></p>
 			<p>{{ form.tipo }}</p>
 			<p/>
 		</div>
