--- a/alephuba/templates/documentos/add_documento.html
+++ b/alephuba/templates/documentos/add_documento.html
@@ -41,13 +41,7 @@
 	</fieldset>
 	
 	<fieldset id="step_detalles" class="step">
-   		<h3>Paso 3 - Detalles del documento</h3>
-		<div class="field_container">
-			<p><label class="optional" for="id_detalles">Detalles:</label></p>
-			<p>{{ form.detalles }}</p>
-			<p/>
-		</div>
-		
+   		<h3>Paso 3 - Información de materias</h3>
 		<div class="field_container">
 			<p><label class="optional" for="id_carrera">Carreras:</label></p>
 			<p>{{ form.carrera }}</p>
@@ -66,6 +60,12 @@
 		<div class="field_container">
 			<p><label for="id_doc_file">Archivo:</label></p>
 			<p>{{ form.doc_file }}</p>
+			<p/>
+		</div>
+		
+		<div class="field_container">
+			<p><label class="optional" for="id_detalles">Detalles:</label></p>
+			<p>{{ form.detalles }}</p>
 			<p/>
 		</div>
 		
